# pycamt

./: .c2pconfig  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/actions/setup-uv/: action.yml
.github/workflows/: main.yml  on-release-main.yml
docs/: index.md
pycamt/: parser.py
tests/: test_parser.py  test_transaction.py
