[project]
name = "pycamt"
version = "0.1.0"
description = "Camt053Parser is a flexible and extensible Python class designed to parse CAMT.053 XML files, which are used for bank-to-customer account report messages in the financial industry. The parser supports multiple versions of the CAMT.053 standard, making it a versatile tool for extracting financial transaction data."
authors = [
  { name = "Olivier D'Ancona", email = "folivier_dancona@hotmail.com" },
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
dependencies = ["lxml>=6.0.2"]

[project.urls]
Homepage = "https://github.com/ODAncona/pycamt"
Documentation = "https://ODAncona.github.io/pycamt/"
Repository = "https://github.com/ODAncona/pycamt"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=6.0.0",
  "deptry>=0.23.0",
  "pre-commit>=4.0.0",
  "tox-uv>=1.29.0",
  "ipykernel>=6.29.0",
  "ruff>=0.9.0",
]

docs = ["mkdocs>=1.6", "mkdocs-material>=9.7", "mkdocstrings[python]>=0.23"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pycamt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["pycamt"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
  "YTT", # flake8-2020
  "S",   # flake8-bandit
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "C4",  # flake8-comprehensions
  "T10", # flake8-debugger
  "SIM", # flake8-simplify
  "I",   # isort
  "C90", # mccabe
  "E",
  "W",   # pycodestyle
  "F",   # pyflakes
  "PGH", # pygrep-hooks
  "UP",  # pyupgrade
  "RUF", # ruff
  "TRY", # tryceratops
]

ignore = [
  "E501", # LineTooLong
  "E731", # DoNotAssignLambda
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
